--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  background-color: #a0a5e1;
+  height: 100vh;
+  overflow-y: auto;
 }
