--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,7 +1,17 @@
 .about {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#e66465, #9198e5);
+  background-color: #a0a5e1;
   height: 85vh;
+  padding: 10px;
+}
+#tree-photo {
+  margin-top: 10vh;
+  height: 40vh;
+}
+.bio {
+  width: 100vw;
+  height: 65vh;
 }
