--- a/src/lessons/Lessons.css
+++ b/src/lessons/Lessons.css
@@ -2,6 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(#e66465, #9198e5);
+  background-color: #a0a5e1;
   height: 85vh;
 }
