filled in reed component, resized some images

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -7,9 +7,9 @@
   height: 85vh;
   padding: 10px;
 }
-#tree-photo {
+#standing-photo {
   margin-top: 10vh;
-  height: 40vh;
+  height: 50vh;
 }
 .bio {
   width: 100vw;
