--- a/src/reeds/Reeds.css
+++ b/src/reeds/Reeds.css
@@ -1,7 +1,10 @@
+.intro {
+  margin: 10vw;
+}
 .reeds {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: #a0a5e1;
   height: 85vh;
 }
